[package]
name = "easy-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.30"
zip = "2.1.6"
tar = "0.4.41"
anyhow = "1.0.44"
sevenz-rust = "0.6.1"
bzip2 = "0.4.4"
xz2 = "0.1.7"
walkdir = "2.5.0"
anyhow-source-location = { git = "https://github.com/work-spaces/anyhow-source-location", rev = "019b7804e35a72f945b3b4b3a96520cdbaa77f70" }
sha256 = "1.5.0"
printer = { git = "https://github.com/work-spaces/printer-rs", rev = "6142c3135dae0231c4de865962967f9de65ce002", optional = true }
glob-match = "0.2.1"
serde = "1"


[features]
default = ["printer"]
printer = ["dep:printer"]
